# CMakeLab

./: .gitignore  README.md
cmake_target/target_compile/: CMakeLists.txt
cmake_target/target_include/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
message/cmake_file/: CMakeLists.txt  main.cpp
message/cmake_file/src/: xlog.cpp  xthread.cpp
message/cmake_include/: CMakeLists.txt
message/cmake_include/cmake/: test_cmake.cmake
message/cmake_out/: CMakeLists.txt
message/cmake_out/test_xlog/: CMakeLists.txt  testXlog.cpp
message/cmake_out/xlog/: CMakeLists.txt  xlog.cpp  xlog.h
message/notes/: CMakeLists.txt  log.txt  main.cpp
message/system_ver/: CMakeLists.txt
message/ver/: CMakeLists.txt
src/firstCmake/: CMakeLists.txt  first_cmake.cpp
src/first_cmake_lib/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/first_cmake_lib/test_logger/: CMakeLists.txt  test_logger.cpp
